@@ -322,10 +322,7 @@ module glimmer_types
 
   type glimmer_funits
     character(fname_length) :: sigfile                         !*FD sigma coordinates file
-    character(fname_length) :: prcpfile                        !*FD Precipitation file
-    character(fname_length) :: presusrffile                    !*FD Present-day surface file
     character(fname_length) :: forcfile                        !*FD Temperature forcing file
-    character(fname_length) :: output_stem                     !*FD output filename stem
     character(fname_length) :: ncfile                          !*FD configuration file for netCDF I/O
     type(glimmer_nc_output),pointer :: out_first=>NULL()       !*FD first element of linked list defining netCDF outputs
     type(glimmer_nc_input), pointer :: in_first=>NULL()        !*FD first element of linked list defining netCDF inputs
@@ -522,7 +519,6 @@ contains
     params%forcdata%flines       = 0
 
     params%funits%sigfile        = ''
-    params%funits%output_stem    = 'untitled'
     params%funits%ncfile         = ''
 
     params%numerics%time         = 0.0
